<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Ilip</string>
    <string name="project_name">Institute Linking with Parents</string>
    <string name="company_name">Wordpro</string>
    <string name="URL_WEB1">http://20.198.3.8/</string>
    <string name="URL_WEB">http://146.56.52.83:82/</string>

    <string name="logintext">Login</string>
    <string name="registrationtext">Registration</string>
    <string name="button_label_student">Student</string>
    <string name="button_label_parent">Parent</string>
    <string name="fourDigitNewPin">Enter 4 Digit New PIN</string>
    <string name="re_enterPin">Re-Enter PIN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_invalid_email">This Email Address is invalid</string>

    <string name="error_invalid_phone_number">This Mobile number is invalid</string>

    <string name="error_invalid_pan_number">This Pan number is invalid</string>

    <string name="error_field_required">This field is required</string>

    <string name="notification_error_ssl_cert_invalid">SSL ERROR! GIVE PERMISSION</string>

    <string name="error_text">Invalid Login Credential</string>
    <string name="settings_pwd_equal">Password Match</string>
    <string name="settings_pwd_not_equal">Password Not Match</string>
    <string name="dashBoard">DashBoard</string>
    <string name="otpMesage">OTP has been sent on your mobile number, please validate it.</string>
    <string name="RegiterdDone">Registration done Successfully !</string>
    <string name="enterCorrectPIN">Please enter correct 4 PIN password.</string>
    <string name="resetpinTitle">Reset PIN</string>
    <string name="fourDigitOldPin">Enter your old PIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="myProfiletext">My Profile</string>
    <string name="Successfully">Reset Successfully</string>
    <string name="ExiApp">Do you want to exit?</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="_09_12_2022_6_33_pm">09/12/2022 6:33 PM</string>
    <string name="total_present">Total Present</string>
    <string name="total_lectures">Total Lectures</string>
    <string name="examination_grade_point">Examination (Grade point)</string>
    <string name="course_wise">Subject Wise</string>
    <string name="_0">0%</string>
    <string name="syllabus_status_completed">Syllabus Status (Completed) </string>
    <string name="attendance_course_wise">Attendance (Subject)</string>
    <string name="net_attendance">Net Attendance</string>
    <string name="_30">30/</string>
    <string name="subjecttype">SubjectType</string>
    <string name="subject_employee">Subject Employee</string>
    <string name="error_wrong_user_type">UserType is not match with credentials.</string>
    <string name="restApp">Do you want to clear all data and restart the app</string>
    <string name="msg_token_fmt" formatted="true">100</string>
    <string name="action_publish_assi">Published Assignment</string>
    <string name="action_Sub_assi">Submitted Assignment</string>
</resources>